--- a/styles.scss
+++ b/styles.scss
@@ -547,6 +547,10 @@ img {
     margin-top: 0;
   }
 
+  .bold p {
+    margin-bottom: 0;
+  }
+
   > p:last-child {
     margin-bottom: 0;
   }
